[package]
name = "ARLens"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12.0"
glam = "0.24.0"
anyhow = "1.0.75"

# We'll use a simplified approach without bevy_xr_prototype 
# since it requires complex setup
arkit_binding = { git = "https://github.com/parnikkapore/arkit-binding-rs", branch = "main" }

[lib]
name = "ARLens"
crate-type = ["staticlib", "cdylib"]

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2.7"
metal = "0.24.0"